Fixed alignment of the header

--- a/blog/css/default.scss
+++ b/blog/css/default.scss
@@ -75,7 +75,6 @@ pre {
     /* border-bottom: solid 2px $brandBackgroundColor; */
     background : $brandBackgroundColor;
     padding    : 10px 0px 10px 0px;
-    text-align : center;
 
     @media #{$breakpoint-small} {
         text-align : left;
